cmake_minimum_required(VERSION 3.23)
project(UniNA_Ex)

set(CMAKE_CXX_STANDARD 14)

add_executable(esercizio_01a esercizio_01a.cpp)
add_executable(esercizio_01b esercizio_01b.cpp)
add_executable(prova prova.cpp)
add_executable(esercizio_a_291022 ./291022/esercizio_a.cpp)
add_executable(esercizio_b_291022 ./291022/esercizio_b.cpp)

add_executable(esercizio_e1_021122 ./E021122/esercizio_1.cpp)
add_executable(esercizio_e3_021122 ./E021122/esercizio_3.cpp)
add_executable(esercizio_e4_021122 ./E021122/esercizio_4.cpp)

add_executable(esercizio_e1_081122 ./E081122/esercizio_1.cpp)
add_executable(esercizio_e2_081122 ./E081122/esercizio_2.cpp)
add_executable(esercizio_e3_081122 ./E081122/esercizio_3.cpp)

add_executable(appunti_081122 ./appunti/081122.cpp)