cmake_minimum_required(VERSION 3.23)
project(UniNA_Ex)

set(CMAKE_CXX_STANDARD 23)

add_executable(esercizio_01a esercizio_01a.cpp)
add_executable(esercizio_01b esercizio_01b.cpp)
add_executable(prova prova.cpp)
add_executable(esercizio_a_291022 ./291022/esercizio_a.cpp)
add_executable(esercizio_b_291022 ./291022/esercizio_b.cpp)

add_executable(esercizio_e1_021122 ./E021122/esercizio_1.cpp)
add_executable(esercizio_e3_021122 ./E021122/esercizio_3.cpp)
add_executable(esercizio_e4_021122 ./E021122/esercizio_4.cpp)

add_executable(esercizio_e1_081122 ./E081122/esercizio_1.cpp)
add_executable(esercizio_e2_081122 ./E081122/esercizio_2.cpp)
add_executable(esercizio_e3_081122 ./E081122/esercizio_3.cpp)

add_executable(appunti_081122 ./appunti/081122.cpp)
add_executable(appunti_221122 ./appunti/221122.cpp)
add_executable(appunti_011222 ./appunti/011222.cpp)

add_executable(esercizio_e4_091122 ./E091122/esercizio_4.cpp)
add_executable(esercizio_e5_091122 ./E091122/esercizio_5.cpp)
add_executable(esercizio_e6_091122 ./E091122/esercizio_6.cpp)

add_executable(esercizio_e1_111122 ./E111122/esercizio_1.cpp)
add_executable(esercizio_e2_111122 ./E111122/esercizio_2.cpp)

add_executable(esercizio_e2_161122 ./E161122/esercizio_2.cpp)
add_executable(esercizio_e3_161122 ./E161122/esercizio_3.cpp)

add_executable(esercizio_e1_171122 ./E171122/esercizio_1.cpp)
add_executable(esercizio_e2_171122 ./E171122/esercizio_2.cpp)
add_executable(esercizio_e3_171122 ./E171122/esercizio_3.cpp)
add_executable(esercizio_e4_171122 ./E171122/esercizio_4.cpp)
add_executable(esercizio_e5_171122 ./E171122/esercizio_5.cpp)
add_executable(esercizio_e6_171122 ./E171122/esercizio_6.cpp)
add_executable(esercizio_e7_171122 ./E171122/esercizio_7.cpp)
add_executable(esercizio_e8_171122 ./E171122/esercizio_8.cpp)
add_executable(esercizio_e9_171122 ./E171122/esercizio_9.cpp)
add_executable(esercizio_e10_171122 ./E171122/esercizio_10.cpp)

add_executable(esercizio_e1_231122 ./E231122/esercizio_1.cpp)
add_executable(esercizio_e2_231122 ./E231122/esercizio_2.cpp)
add_executable(esercizio_e3_231122 ./E231122/esercizio_3.cpp)

add_executable(esercizio_e1_301122 ./E301122/esercizio_1.cpp)
add_executable(esercizio_e2_301122 ./E301122/esercizio_2.cpp)
add_executable(esercizio_e3_301122 ./E301122/esercizio_3.cpp)
add_executable(esercizio_e4_301122 ./E301122/esercizio_4.cpp)
add_executable(esercizio_e5_301122 ./E301122/esercizio_5.cpp)